правки по коду